testsuite/tests/typecheck/should_fail/tcfail134.stderr

tcfail134.hs:5:33: error:
    • Expecting one more argument to ‘XML’
      Expected a type, but ‘XML’ has kind ‘* -> Constraint’
    • In the type signature: toXML :: a -> XML
      In the class declaration for ‘XML’
